<resources>
    <string name="app_name">Bitmi Configurator</string>
    <string name="paired_bluetooth_devices">Paired bluetooth devices</string>
    <string name="refresh_devices">Reload devices</string>
    <string name="ssid">SSID</string>
    <string name="psk">Password</string>
    <string name="start_configuration">Begin configuring</string>
    <string name="messages_button">Messages</string>
    <string name="messages">Messages</string>
    <string name="ip_address_message">Please wait 2-3 minutes or retry a few times...</string>
    <string name="messages_activity_label">Messages</string>

</resources>
