<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="io.brendanmyers.rpiconf.MainActivity">

    <TextView
        android:id="@+id/devices_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/paired_bluetooth_devices"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/devices_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/devices_label"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/refresh_devices_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/devices_spinner"
        android:layout_alignParentEnd="true"
        android:text="@string/refresh_devices" />


    <TextView
        android:id="@+id/ssid_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/refresh_devices_button"
        android:text="@string/ssid"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/ssid_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ssid_label"
        android:layout_alignParentStart="true" />


    <TextView
        android:id="@+id/psk_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ssid_text"
        android:text="@string/psk"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/psk_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/psk_label"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/start_configuration" />

        <Button
            android:id="@+id/messages_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/messages_button" />
    </LinearLayout>

    <TextView
        android:id="@+id/ip_address"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttons_layout"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="11dp"
        android:text="IP address will appear here\n(should be like: 192.168.x.x)"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <TextView
        android:id="@+id/ip_address_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ip_address"
        android:text="@string/ip_address_message"/>
</RelativeLayout>
